# moosestack

./: .gitignore  .npmrc  AGENTS.md  BACKWARD_COMPATIBILITY_TESTING.md  CLAUDE.md  Cargo.toml  ID_STRATEGY.md  LINEAR_ISSUE_TRACE_ID.md  LOGGING_CURRENT_STATE.md  LOGGING_USER_STORIES.md  P0_FILTERS.md  P0_FILTER_REQUIREMENTS.md  PROPTEST_FINDINGS.md  README.md  TRACE_ID_IMPLEMENTATION_PLAN.md  USER_CODE_LOGGING_RUST_ENRICHMENT.md  biome.json  context7.json  eslint.config.js  flake.nix  kafka-pull.diff  moose_lib_schema_reg.diff  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sr.diff  turbo.json
.claude/: product-marketing-context.md  settings.json
.cursor/: DOCKER_SETUP.md  Dockerfile  environment.json  test-docker.sh  worktrees.json
.github/: dependabot.yml
MyProjectTest/: moose.config.toml  (+1 more)
apps/devkafka/: Cargo.toml
apps/devkafka/src/: broker.rs  connection.rs  error.rs  groups.rs  lib.rs  main.rs  server.rs  storage.rs
apps/devkafka/src/handlers/: api_versions.rs  create_topics.rs  delete_topics.rs  fetch.rs  find_coordinator.rs  heartbeat.rs  init_producer_id.rs  join_group.rs  leave_group.rs  list_offsets.rs  metadata.rs  mod.rs  offset_commit.rs  offset_fetch.rs  produce.rs  sync_group.rs
apps/devredis/: Cargo.toml
apps/devredis/src/: connection.rs  db.rs  frame.rs  lib.rs  lua.rs  main.rs  parse.rs  server.rs  shutdown.rs
apps/devredis/src/cmd/: del.rs  eval.rs  expire.rs  get.rs  keys.rs  lpop.rs  lrem.rs  mod.rs  ping.rs  publish.rs  quit.rs  rpoplpush.rs  rpush.rs  set.rs  subscribe.rs
apps/devredis/tests/: integration.rs
(+1797 files in other folders)
