[package]
name = "devkafka"
version = "0.1.0"
edition = "2021"

[dependencies]
kafka-protocol = { version = "0.16", features = ["broker", "messages_enums"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
crc32c = "0.6"
tokio-util = { version = "0.7", features = ["rt"] }
